# whodat

./: Cargo.toml  README.md
src/: lib.rs
whodat/: Cargo.toml
whodat-cli/: Cargo.toml
whodat-cli/src/: main.rs
whodat/src/: evdev_device.rs  hidraw_device.rs  lib.rs  physical_device.rs  types.rs  util.rs
whodat_daemon/: Cargo.toml
whodat_daemon/data/: org.freedesktop.Whodat.xml
whodat_daemon/src/: main.rs
