[package]
name = "whodat-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whodat-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whodat = { path = "../whodat" }
clap = { version="4.4", features = ["derive"] }
